@@ -34,13 +34,15 @@ tip: we can use `mmo` or `minimo` as the main command after v0.4.0, but in older
 
 ## Usage
 
+we can use minimo by typing command in console, or calling its apis in your own project.
+
 ### Install and update using `pip`
 
 	$ pip install -U minimo
 
 ### Create project instance
 
-usage:
+usage in cli mode:
 
     $ mmo init [project-name] [-t template-name-or-path]
 
@@ -49,9 +51,26 @@ specified template, minimo will initialize the project with 'task'
 template. currenty template name only supports 'task', or you can
 specify a path which contains the template.
 
+----------
+
+usage in api mode:
+
+```
+    import minimo
+
+    mmo = minimo.Application(
+                interface="api",
+                root_path=instance_project_path)
+
+    # return True or False for `init` result
+    result = mmo.main(
+                    "init",
+                    name="helloKitty")
+```
+
 ### Create new cases
 
-usage:
+usage in cli mode:
 
     $ mmo new [cases...] [-a author]
 
@@ -66,11 +85,28 @@ templates, otherwise, by the project default templates.
 if specified author name, it will be filled in the template file, or minimo
 will get the current system user as the author name.
 
+----------
+
+usage in api mode:
+
+```
+    import minimo
+
+    mmo = minimo.Application(
+                interface="api",
+                root_path=instance_project_path)
+
+    # return successfully created cases list
+    cases = mmo.main(
+                "new",
+                cases=["case1", "suite2/case1", "suite2/case2"])
+```
+
 template file is written in mako's syntax, check out [mako](https://www.makotemplates.org). 
 
 ### List all standard cases
 
-usage:
+usage in cli mode:
 
     $ mmo ls [pattern...]
 
@@ -81,9 +117,24 @@ if not specified "pattern", it will list all standard cases' names under
 
     $ mmo ls foo bar*
 
+----------
+
+usage in api mode:
+
+```
+    import minimo
+
+    mmo = minimo.Application(
+                interface="api",
+                root_path=instance_project_path)
+
+    # return sorted valid cases
+    sorted_cases = mmo.main("ls")
+```
+
 ### Run suite
 
-usage:
+usage in cli mode:
 
     $ mmo run [case...]
 
@@ -97,12 +148,47 @@ and also can specify some suites (case group under one folder) as:
 
 minimo will run all cases under those suites.
 
+----------
+
+usage in api mode:
+
+```
+    import minimo
+
+    mmo = minimo.Application(
+                interface="api",
+                root_path=instance_project_path)
+
+    # return output file path or None if all failed
+    sorted_cases = mmo.main(
+                    "run",
+                    cases=["suite1", "suite2/case1", suite2/case2])
+```
+
 ### Get help
 
 	$ mmo --help
 	$ mmo [command] --help
 
+seems not useful in api mode
+
 ### Get version
 
-	$ mmo version
+usage in cli mode:
 
+    $ mmo version
+
+----------
+
+usage in api mode:
+
+```
+    import minimo
+
+    mmo = minimo.Application(
+                interface="api",
+                root_path=instance_project_path)
+
+    # version string
+    version = mmo.main("version")
+```
